--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         />
         <title>Vite + React + TS</title>
     </head>
-    <body class="font-poppins motion-safe:transition-all">
-        <div id="root" class="h-dvh w-full"></div>
+    <body class="font-poppins">
+        <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
