--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
             rel="stylesheet"
         />
-        <title>Vite + React + TS</title>
+        <title>The wild oasis</title>
     </head>
     <body class="font-poppins">
         <div id="root"></div>
